add chi auth
